# kiro-practice

./: LICENSE  README.md  pyproject.toml
.kiro/specs/home-book-management-api/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/kiro-cli-ec2-setup/: .config.kiro  design.md  requirements.md  tasks.md
docs/: kiro-cli-ec2-setup-guide.md
docs/api/: api-specification.md
docs/kiro/: kiroを活用した開発の進め方.md  kiro関連ファイル.md
