[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-book-management-api"
version = "0.1.0"
description = "家庭用蔵書管理REST API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "pydantic[email]>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.92.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.23.0",
    "factory-boy>=3.3.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
